# duopipe

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  build-linux.sh  install.ps1  install.sh  peer.toml.example
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ROADMAP.md
src/: app_state.rs  auth.rs  buffer.rs  config.rs  encryption.rs  error.rs  identity.rs  logging.rs  main.rs  name_conflict.rs  net.rs  nostr_discovery.rs  peer_params.rs  peer_state.rs  pin.rs  pin_auth.rs  secret.rs  socks5.rs
src/iroh_mode/: endpoint.rs  helpers.rs  mod.rs  peer.rs
src/signaling/: codec.rs  mod.rs
src/tui/: mod.rs  setup.rs  textinput.rs  ui.rs
test-scripts/: README.md  echo_server.py  keys.sh  peer-dial.sh  peer-listen.sh  test_tunnel.py
