[package]
name = "duopipe"
version = "0.0.21"
edition = "2024"
description = "Single-TCP port forwarding through iroh P2P connections"

[dependencies]
iroh = "1.0.0"
iroh-mdns-address-lookup = "0.4.0"
noq-proto = "1.0.0"
futures = "0.3"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["full"] }
socket2 = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
base64 = "0.22"
nostr-sdk = { version = "0.44.1", features = ["nip44"] }
sha2 = "0.10"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
jiff = "0.2"
ratatui = "0.30.1"
parking_lot = "0.12.5"
tokio-util = "0.7.18"
crossterm = { version = "0.29", features = ["event-stream"] }
gethostname = "1"
tui-input = { version = "0.15.3", default-features = false, features = ["ratatui-crossterm"] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
